<resources>
    <string name="app_name">Cocus-code-challenge</string>
    <!-- TODO: Remove or change this placeholder text -->

    <string name="find_user_title">Cocus code challenge</string>
    <string name="challenge_title">Challenge detail</string>
    <string name="user_detail_title">Challenges</string>

    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="username_field_black">Username field is blank</string>
    <string name="search_query_hint">Search by username</string>
    <string name="label_position">Position</string>
    <string name="label_username">User</string>
    <string name="label_honor">Honor</string>
    <string name="label_cian">Cian</string>
    <string name="label_best_language">Best language</string>
    <string name="label_completed_languages">Completed Languages</string>
    <string name="label_date">Date</string>
    <string name="label_challenge_name">Challenge name</string>
    <string name="label_rank">Rank</string>
    <string name="label_description">Description</string>
    <string name="label_languages">Languages</string>
    <string name="menu_completed_challenges">Completed challenges</string>
    <string name="menu_authored_challenges">Authored challenges</string>
    <string name="label_tags">Tags</string>
    <string name="label_category">Category</string>
    <string name="label_starts">Starts</string>
    <string name="label_attempts">Attempts</string>
    <string name="total_completed">Completed</string>
    <string name="label_created_by">Created by</string>
    <string name="label_created">Published</string>

    <string name="message_challenge_not_found">Challenge not found</string>
    <string name="message_error">An error has occurred</string>
    <string name="message_user_not_found">User not found</string>
    <string name="message_not_found">Resource not found</string>
    <string name="message_server_error">There is an issue with the server.</string>
    <string name="message_server_network_error_retry">There is an issue connecting with the server.\nplease try again.</string>
    <string name="label_retry"> There is an issue connecting with the server \n CLick here to Retry</string>
    <string name="no_more_results_found">No more results was found</string>
    <string name="user_found">There are not user found</string>
    <string name="order_by_rank">Order by rank</string>
    <string name="order_by_searched">Order by searched</string>
</resources>