<?xml version="1.0" encoding="utf-8"?>
<navigation xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    app:startDestination="@id/listUserFragment"
    android:id="@+id/main_app">

    <fragment
        android:id="@+id/listUserFragment"
        android:name="br.com.anderson.cocuscodechallenge.ui.listuser.ListUserFragment"
        android:label="@string/find_user_title" >

        <action
            android:id="@+id/action_listUserFragment_to_userDetailFragment"
            app:destination="@id/userDetailFragment" />
    </fragment>

    <fragment
        android:id="@+id/userDetailFragment"
        android:name="br.com.anderson.cocuscodechallenge.ui.userdetail.UserDetailFragment"
        android:label="@string/user_detail_title" >
        <argument android:name="username"
            app:argType="string"
            app:nullable="true"/>
        <action
            android:id="@+id/action_userDetailFragment_to_challengeFragment"
            app:destination="@id/challengeFragment" />
    </fragment>
    <fragment
        android:id="@+id/challengeFragment"
        android:name="br.com.anderson.cocuscodechallenge.ui.challenge.ChallengeFragment"
        android:label="@string/challenge_title" >
        <argument android:name="id"
            app:argType="string"
            app:nullable="true"/>
    </fragment>
</navigation>