<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:background="#fff"
    android:foreground="?android:attr/selectableItemBackground"
    android:padding="@dimen/adapter_padding">


    <TextView
        android:textStyle="bold"
        android:id="@+id/labelposition"
        android:layout_width="@dimen/position_width"
        android:layout_height="wrap_content"
        android:text="@string/label_position"
        android:textAlignment="textStart"

        android:textAppearance="@style/TextAppearance.AppCompat.Medium"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

    </TextView>

    <TextView
        android:textStyle="bold"
        android:id="@+id/labelusername"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="@dimen/label_left_margin"
        android:layout_marginEnd="@dimen/label_right_margin"
        android:text="@string/label_username"
        android:textAlignment="textStart"
        android:textAppearance="@style/TextAppearance.AppCompat.Medium"
        app:layout_constraintEnd_toStartOf="@+id/honor"
        app:layout_constraintStart_toEndOf="@+id/labelposition"
        app:layout_constraintTop_toTopOf="parent">

    </TextView>

    <TextView
        android:id="@+id/position"
        android:layout_width="@dimen/position_width"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/label_content_title_top_margin"
        android:text=""
        android:textAlignment="textStart"
        android:textAppearance="@style/TextAppearance.AppCompat.Medium"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/labelposition">

    </TextView>

    <TextView
        android:id="@+id/username"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="@dimen/label_left_margin"
        android:layout_marginTop="@dimen/label_content_title_top_margin"
        android:layout_marginEnd="@dimen/label_right_margin"
        android:text=""
        android:textAlignment="textStart"
        android:textAppearance="@style/TextAppearance.AppCompat.Medium"
        app:layout_constraintEnd_toStartOf="@+id/honor"
        app:layout_constraintStart_toEndOf="@+id/position"
        app:layout_constraintTop_toBottomOf="@+id/labelusername">

    </TextView>

    <TextView
        android:textStyle="bold"
        android:id="@+id/labelhonor"
        android:layout_width="@dimen/honor_width"
        android:layout_height="wrap_content"
        android:text="@string/label_honor"
        android:textAlignment="textStart"
        android:textAppearance="@style/TextAppearance.AppCompat.Medium"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="parent">

    </TextView>

    <TextView
        android:id="@+id/honor"
        android:layout_width="@dimen/honor_width"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/label_content_title_top_margin"
        android:text=""
        android:textAlignment="textStart"
        android:textAppearance="@style/TextAppearance.AppCompat.Medium"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/labelhonor">

    </TextView>


    <TextView
        android:textStyle="bold"
        android:layout_marginEnd="@dimen/label_right_margin"
        android:id="@+id/labelname"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/label_title_content_top_margin"
        android:text="@string/label_cian"
        android:textAlignment="textStart"
        android:textAppearance="@style/TextAppearance.AppCompat.Medium"
        app:layout_constraintEnd_toStartOf="@+id/labelbestlanguage"
        app:layout_constraintStart_toStartOf="@+id/position"
        app:layout_constraintTop_toBottomOf="@+id/username">

    </TextView>

    <TextView
        android:textStyle="bold"
        android:id="@+id/labelbestlanguage"
        android:layout_width="@dimen/bestlanguage_width"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/label_title_content_top_margin"
        android:text="@string/label_best_language"
        android:textAlignment="textStart"
        android:textAppearance="@style/TextAppearance.AppCompat.Medium"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/username">

    </TextView>


    <TextView
        android:id="@+id/bestlanguage"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/label_content_title_top_margin"
        android:text=""
        android:textAlignment="textStart"
        android:textAppearance="@style/TextAppearance.AppCompat.Medium"

        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="@+id/labelbestlanguage"
        app:layout_constraintStart_toStartOf="@+id/labelbestlanguage"
        app:layout_constraintTop_toBottomOf="@+id/labelname">

    </TextView>
    <TextView
        android:id="@+id/name"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/label_content_title_top_margin"
        android:text=""
        android:textAlignment="textStart"
        android:textAppearance="@style/TextAppearance.AppCompat.Medium"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="@+id/labelname"
        app:layout_constraintStart_toStartOf="@+id/position"
        app:layout_constraintTop_toBottomOf="@+id/labelname">

    </TextView>




</androidx.constraintlayout.widget.ConstraintLayout>