<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:background="#fff"
    android:foreground="?android:attr/selectableItemBackground"
    android:padding="@dimen/adapter_padding">



    <TextView
        android:layout_marginEnd="@dimen/label_right_margin"
        android:id="@+id/labelusername"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:text="@string/label_challenge_name"
        android:textAlignment="textStart"
        android:textAppearance="@style/TextAppearance.AppCompat.Medium"
        android:textStyle="bold"
        app:layout_constraintEnd_toStartOf="@+id/labelrank"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

    </TextView>


    <TextView
        android:layout_marginEnd="@dimen/label_right_margin"
        android:id="@+id/name"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/label_content_title_top_margin"
        android:text=""
        android:textAlignment="textStart"
        android:textAppearance="@style/TextAppearance.AppCompat.Medium"
        app:layout_constraintEnd_toStartOf="@+id/labelrank"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/labelusername">

    </TextView>

    <TextView
        android:textStyle="bold"
        android:id="@+id/labelrank"
        android:layout_width="@dimen/rank_width"
        android:layout_height="wrap_content"
        android:text="@string/label_rank"
        android:textAlignment="textStart"
        android:textAppearance="@style/TextAppearance.AppCompat.Medium"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="parent">

    </TextView>

    <TextView
        android:layout_marginTop="@dimen/label_content_title_top_margin"
        android:id="@+id/rank"
        android:layout_width="@dimen/rank_width"
        android:layout_height="wrap_content"
        android:text=""
        android:textAlignment="textStart"
        android:textAppearance="@style/TextAppearance.AppCompat.Medium"
        app:layout_constraintEnd_toEndOf="@+id/labelrank"
        app:layout_constraintTop_toBottomOf="@+id/labelrank">

    </TextView>


    <TextView
        android:id="@+id/labeldescription"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/label_title_content_top_margin"
        android:text="@string/label_description"
        android:textAlignment="textStart"
        android:textAppearance="@style/TextAppearance.AppCompat.Medium"
        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/name">

    </TextView>


    <TextView
        android:id="@+id/description"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:text=""
        android:maxLines="3"
        android:textAlignment="textStart"
        android:textAppearance="@style/TextAppearance.AppCompat.Medium"
        app:layout_constraintEnd_toEndOf="@+id/labeldescription"
        app:layout_constraintStart_toStartOf="@+id/labeldescription"
        app:layout_constraintTop_toBottomOf="@+id/labeldescription">

    </TextView>

    <TextView
        android:id="@+id/labellanguages"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/label_title_content_top_margin"
        android:text="@string/label_languages"
        android:textAlignment="textStart"
        android:textAppearance="@style/TextAppearance.AppCompat.Medium"
        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/description">

    </TextView>


    <TextView
        android:id="@+id/languages"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:text=""
        android:textAlignment="textStart"
        android:textAppearance="@style/TextAppearance.AppCompat.Medium"
        android:maxLines="3"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="@+id/labellanguages"
        app:layout_constraintStart_toStartOf="@+id/labellanguages"
        app:layout_constraintTop_toBottomOf="@+id/labellanguages">

    </TextView>

</androidx.constraintlayout.widget.ConstraintLayout>