<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent">
    <ProgressBar
        android:id="@+id/progressloading"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <androidx.core.widget.NestedScrollView
        android:layout_width="0dp"
        android:layout_height="0dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:padding="@dimen/content_fragment_padding">

            <TextView
                android:id="@+id/labelusername"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginEnd="@dimen/label_right_margin"
                android:text="@string/label_challenge_name"
                android:textAlignment="textStart"
                android:textAppearance="@style/TextAppearance.AppCompat.Medium"
                android:textStyle="bold"
                app:layout_constraintEnd_toStartOf="@+id/labelrank"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent">

            </TextView>


            <TextView
                android:id="@+id/name"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/label_content_title_top_margin"
                android:layout_marginEnd="@dimen/label_right_margin"
                android:text=""
                android:textAlignment="textStart"
                android:textAppearance="@style/TextAppearance.AppCompat.Medium"
                app:layout_constraintEnd_toStartOf="@+id/labelrank"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/labelusername">

            </TextView>

            <TextView
                android:id="@+id/labelrank"
                android:layout_width="@dimen/rank_width"
                android:layout_height="wrap_content"
                android:text="@string/label_rank"
                android:textAlignment="textStart"
                android:textAppearance="@style/TextAppearance.AppCompat.Medium"
                android:textStyle="bold"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintTop_toTopOf="parent">

            </TextView>

            <TextView
                android:id="@+id/rank"
                android:layout_width="@dimen/rank_width"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/label_content_title_top_margin"
                android:text=""
                android:textAlignment="textStart"
                android:textAppearance="@style/TextAppearance.AppCompat.Medium"
                app:layout_constraintEnd_toEndOf="@+id/labelrank"
                app:layout_constraintTop_toBottomOf="@+id/labelrank">

            </TextView>


            <TextView
                android:id="@+id/labelstarts"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginTop="12sp"
                android:text="@string/label_starts"
                android:textAlignment="textStart"
                android:textAppearance="@style/TextAppearance.AppCompat.Medium"
                android:textStyle="bold"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/name"
                app:layout_constraintWidth_percent="0.32">

            </TextView>

            <TextView
                android:id="@+id/starts"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/label_content_title_top_margin"
                android:text=""
                android:textAlignment="textStart"
                android:textAppearance="@style/TextAppearance.AppCompat.Medium"
                app:layout_constraintEnd_toEndOf="@+id/labelstarts"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/labelstarts">

            </TextView>

            <TextView
                android:id="@+id/labeltotalattempts"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginTop="12sp"
                android:text="@string/label_attempts"
                android:textAlignment="textStart"
                android:textAppearance="@style/TextAppearance.AppCompat.Medium"
                android:textStyle="bold"
                app:layout_constraintEnd_toStartOf="@+id/labeltotalcompleted"
                app:layout_constraintStart_toEndOf="@+id/labelstarts"
                app:layout_constraintTop_toBottomOf="@+id/name"
                app:layout_constraintWidth_percent="0.32">

            </TextView>


            <TextView
                android:id="@+id/attempts"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/label_content_title_top_margin"
                android:text=""
                android:textAlignment="textStart"
                android:textAppearance="@style/TextAppearance.AppCompat.Medium"
                app:layout_constraintEnd_toEndOf="@+id/labeltotalattempts"
                app:layout_constraintStart_toStartOf="@+id/labeltotalattempts"
                app:layout_constraintTop_toBottomOf="@+id/labeltotalattempts">

            </TextView>

            <TextView
                android:id="@+id/labeltotalcompleted"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginTop="12sp"
                android:text="@string/total_completed"
                android:textAlignment="textStart"
                android:textAppearance="@style/TextAppearance.AppCompat.Medium"
                android:textStyle="bold"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/name"
                app:layout_constraintWidth_percent="0.32">

            </TextView>

            <TextView
                android:id="@+id/completed"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/label_content_title_top_margin"
                android:text=""
                android:textAlignment="textStart"
                android:textAppearance="@style/TextAppearance.AppCompat.Medium"
                app:layout_constraintEnd_toEndOf="@+id/labeltotalcompleted"
                app:layout_constraintStart_toStartOf="@+id/labeltotalcompleted"
                app:layout_constraintTop_toBottomOf="@+id/labeltotalcompleted">

            </TextView>


            <TextView
                android:id="@+id/labelcreatedby"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/label_title_content_top_margin"
                android:layout_marginEnd="@dimen/label_right_margin"
                android:text="@string/label_created_by"
                android:textAlignment="textStart"
                android:textAppearance="@style/TextAppearance.AppCompat.Medium"
                android:textStyle="bold"
                app:layout_constraintEnd_toStartOf="@+id/labelcreatedat"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/starts">

            </TextView>


            <TextView

                android:id="@+id/createdby"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/label_content_title_top_margin"
                android:text=""
                android:textAlignment="textStart"
                android:textAppearance="@style/TextAppearance.AppCompat.Medium"
                app:layout_constraintEnd_toEndOf="@+id/labelcreatedby"
                app:layout_constraintStart_toStartOf="@+id/labelcreatedby"
                app:layout_constraintTop_toBottomOf="@+id/labelcreatedby">

            </TextView>

            <TextView
                android:id="@+id/labelcreatedat"
                android:layout_width="@dimen/date_width"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/label_title_content_top_margin"
                android:text="@string/label_created"
                android:textAlignment="textStart"
                android:textAppearance="@style/TextAppearance.AppCompat.Medium"
                android:textStyle="bold"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/starts">

            </TextView>


            <TextView

                android:id="@+id/createdat"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/label_content_title_top_margin"
                android:text=""
                android:textAlignment="textStart"
                android:textAppearance="@style/TextAppearance.AppCompat.Medium"
                app:layout_constraintEnd_toEndOf="@+id/labelcreatedat"
                app:layout_constraintStart_toStartOf="@+id/labelcreatedat"
                app:layout_constraintTop_toBottomOf="@+id/labelcreatedby">

            </TextView>


            <TextView
                android:id="@+id/labelcategory"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/label_title_content_top_margin"
                android:text="@string/label_category"
                android:textAlignment="textStart"
                android:textAppearance="@style/TextAppearance.AppCompat.Medium"
                android:textStyle="bold"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/createdby">

            </TextView>


            <TextView
                android:id="@+id/category"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/label_content_title_top_margin"
                android:text=""
                android:textAlignment="textStart"
                android:textAppearance="@style/TextAppearance.AppCompat.Medium"
                app:layout_constraintEnd_toEndOf="@+id/labelcategory"
                app:layout_constraintStart_toStartOf="@+id/labelcategory"
                app:layout_constraintTop_toBottomOf="@+id/labelcategory">

            </TextView>

            <TextView
                android:id="@+id/labeldescription"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/label_title_content_top_margin"
                android:text="@string/label_description"
                android:textAlignment="textStart"
                android:textAppearance="@style/TextAppearance.AppCompat.Medium"
                android:textStyle="bold"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/category">

            </TextView>


            <TextView
                android:id="@+id/description"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:text=""
                android:textAlignment="textStart"
                android:textAppearance="@style/TextAppearance.AppCompat.Medium"
                app:layout_constraintEnd_toEndOf="@+id/labeldescription"
                app:layout_constraintStart_toStartOf="@+id/labeldescription"
                app:layout_constraintTop_toBottomOf="@+id/labeldescription">

            </TextView>

            <TextView
                android:id="@+id/labellanguages"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/label_title_content_top_margin"
                android:text="@string/label_languages"
                android:textAlignment="textStart"
                android:textAppearance="@style/TextAppearance.AppCompat.Medium"
                android:textStyle="bold"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/description">

            </TextView>


            <TextView
                android:id="@+id/languages"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:text=""
                android:textAlignment="textStart"
                android:textAppearance="@style/TextAppearance.AppCompat.Medium"
                app:layout_constraintEnd_toEndOf="@+id/labellanguages"
                app:layout_constraintStart_toStartOf="@+id/labellanguages"
                app:layout_constraintTop_toBottomOf="@+id/labellanguages">

            </TextView>


            <TextView
                android:id="@+id/labeltags"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/label_title_content_top_margin"
                android:text="@string/label_tags"
                android:textAlignment="textStart"
                android:textAppearance="@style/TextAppearance.AppCompat.Medium"
                android:textStyle="bold"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/languages">

            </TextView>


            <TextView
                android:id="@+id/tags"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:maxLines="3"
                android:text=""
                android:textAlignment="textStart"
                android:textAppearance="@style/TextAppearance.AppCompat.Medium"
                app:layout_constraintEnd_toEndOf="@+id/labeltags"
                app:layout_constraintStart_toStartOf="@+id/labeltags"
                app:layout_constraintTop_toBottomOf="@+id/labeltags">

            </TextView>
        </androidx.constraintlayout.widget.ConstraintLayout>
    </androidx.core.widget.NestedScrollView>

</androidx.constraintlayout.widget.ConstraintLayout>
